# Moneta

./: .gitignore  ARCHITECTURE.md  AUDIT_pre_surgery.md  CLAUDE.md  DEEP_THINK_BRIEF_codeless_schema.md  DEEP_THINK_BRIEF_substrate_handle.md  EXECUTION_constitution_codeless_schema.md  EXECUTION_constitution_singleton_surgery.md  HANDOFF_codeless_schema_moneta.md  HANDOFF_singleton_surgery.md  KICKOFF_codeless_schema.md  MISSION_scout_moneta_v0_3.md  MONETA.md  README.md  SCHEMA_read_path_audit.md  SCOUT_MONETA_v0_3.md  STATE_OF_MONETA.md  SURGERY_complete.md  SURGERY_complete_codeless_schema.md  pyproject.toml
bridge/: README.md  pyproject.toml
bridge/moneta_bridge/: __init__.py  embedder.py
bridge/schema/: CozySchema.usda  plugInfo.json
bridge/tests/: test_embedder.py
docs/: CLAUDE-phase3.md  agent-commandments.md  api.md  bridge-readiness.md  decay-tuning.md  pass5-q6-findings.md  phase2-benchmark-results.md  phase2-closure.md  phase3-closure.md  review-constitution.md  round4-brief.md  substrate-conventions.md  testing.md
docs/patent-evidence/: README.md  pass5-usd-threadsafety-review.md  pass6-lock-shrink-implementation.md
docs/review/: synthesis.md
docs/rounds/: round-1.md  round-2.md  round-3.md  round-4.md
results/: pass5-narrow.csv  pass5-threadsafety-stress.csv  pass5-wide.csv  usd_sizing_results.csv
schema/: MonetaSchema.usda  generatedSchema.usda  plugInfo.json
scripts/: moneta_video_script.md  notebooklm_video.sh  review_harness.py  review_roles.py  review_synthesizer.py  usd_metabolism_bench_v2.py
src/moneta/: __init__.py  api.py  attention_log.py  consolidation.py  decay.py  durability.py  ecs.py  manifest.py  mock_usd_target.py  sequential_writer.py  types.py  usd_target.py  vector_index.py
tests/: _schema_gate_subprocess.py  conftest.py  test_attention_log_gil_guard.py  test_schema_acceptance_gate.py  test_twin_substrate.py  test_twin_substrate_adversarial.py
tests/integration/: .gitkeep  test_durability_roundtrip.py  test_end_to_end_flow.py  test_real_usd_end_to_end.py  test_sequential_writer_ordering.py
tests/load/: .gitkeep  synthetic_session.py
tests/unit/: .gitkeep  test_api.py  test_api_flock.py  test_attention_log.py  test_decay.py  test_ecs.py  test_schema_read_branching.py  test_state_token_roundtrip.py  test_usd_target.py  test_vector_index.py
