[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moneta"
version = "0.2.0"
description = "Memory substrate built on OpenUSD's composition engine. Sibling to Octavius."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Joseph Ibrahim", email = "joseph@josephibrahim.com" },
]
license = { text = "Proprietary" }
keywords = ["memory", "agents", "openusd", "ecs", "cognitive-substrate"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Private :: Do Not Upload",
]

# Runtime dependencies — zero in Phase 1 (stdlib-only ECS).
# Phase 3 adds LanceDB when the vector index backend ships (Pass 4).
#
# pxr (OpenUSD Python bindings) is required for Phase 3 USD authoring
# (src/moneta/usd_target.py) but is NOT pip-installable. It comes from
# Houdini's bundled hython (tested: Houdini 21.0.512, OpenUSD 0.25.5,
# Python 3.11.7). See CLAUDE.md "Build and test commands" for hython
# invocation details. Phase 3 USD tests require hython; Phase 1 tests
# run under plain Python without pxr.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
]

[project.urls]
Repository = "https://github.com/JosephOIbrahim/Moneta"
Blueprint = "https://github.com/JosephOIbrahim/Moneta/blob/main/MONETA.md"
Architecture = "https://github.com/JosephOIbrahim/Moneta/blob/main/ARCHITECTURE.md"

[tool.hatch.build.targets.wheel]
packages = ["src/moneta"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line too long (ruff format handles wrapping)
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
# Default python_files plus the synthetic session harness, which is named
# after its domain purpose rather than the test_*.py convention.
python_files = ["test_*.py", "*_test.py", "synthetic_session.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: fast isolated unit tests",
    "integration: end-to-end deposit/query/attention/consolidation flow tests",
    "load: synthetic session harness tests (Phase 1 completion gate)",
]
