[project]
name = "moneta-bridge"
version = "0.1.0a0"
description = "Comfy-Cozy <-> Moneta bridge: codeless USD schema, embedder, ingest/egress (in development)."
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["moneta_bridge*"]

[tool.pytest.ini_options]
pythonpath = ["."]
